refactor(pr refactoring): removed warnings in the JobsService